--- a/public/login.ejs
+++ b/public/login.ejs
@@ -40,7 +40,7 @@
     </div>
     <style>
         body {
-            background: url("http://eomcreative.com/hsm2/wp-content/uploads/2014/01/slider4.jpg") no-repeat center center fixed;
+            background: url("./images/login.jpg") no-repeat center center fixed;
             -webkit-background-size: cover;
             -moz-background-size: cover;
             -o-background-size: cover;
